# HW_sem_III

./: README.md
3sem_HW2/: hw2.cpp  vectN.cpp  vectN.hpp
3sem_HW3/: Class_HW3.cpp  Class_HW3.hpp  HW3.cpp  test.txt
3sem_NewTask/: BitSet.cpp  BitSet.hpp  CMakeLists.txt  Main.cpp  a.out
3sem_NewTask/Doxygen/: config-list
3sem_NewTask/Doxygen/html/: BitSet_8hpp_source.html  annotated.html  classBitSet-members.html  classBitSet.html  classLineSegment-members.html  classLineSegment.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  index.html
3sem_NewTask/Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_7.js  all_8.js  all_a.js  classes_0.js  functions_1.js  functions_4.js  functions_5.js  related_1.js  searchdata.js
3sem_NewTask/Doxygen/latex/: BitSet_8hpp_source.tex  annotated.tex  classBitSet.tex  classLineSegment.tex  files.tex  refman.tex
3sem_dop/: programiz.cpp
3sem_dop/attempt1/: AVLTree.cpp  AVLTree.hpp  main.cpp
3sem_dop/attempt2/: GfG.cpp  avlt.cpp  avlt.hpp  main.cpp
3sem_test/: Ver1.c  Ver2.c  final.c  t.txt
